# contract-ai-agent

./: Application plan.md  README.md  RUNNING_GUIDE.md  create_bigquery_schema.py  main.py  package-lock.json  plan.md  populate_dummy_data.py  pyproject.toml  requirements.txt  run_app.sh  setup.py
contract_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
contract_ai_agent_modules/: bigquery_client.py  queries.py
contract_ai_agent_modules/adk/agents/: readonly_context.py
contract_ai_agent_modules/adk/agents/main_agent/: main_agent.py
contract_ai_agent_modules/adk/agents/toolsets/bigquery/: bigquery_credentials.py  bigquery_tool.py  bigquery_toolset.py  config.py  metadata_tool.py  query_tool.py
contract_ai_agent_modules/adk/agents/toolsets/breach_analysis/: breach_analysis_toolset.py
contract_ai_agent_modules/adk/agents/toolsets/document_processing/: document_processing_tool.py  document_processing_toolset.py
contract_ai_agent_modules/adk/agents/toolsets/general_insights/: general_insights_toolset.py
contract_ai_agent_modules/adk/agents/toolsets/penalty_analysis/: penalty_analysis_toolset.py
contract_ai_agent_modules/adk/tools/: base_tool.py  base_toolset.py  tool_result.py
contract_ai_agent_modules/adk/utils/: feature_decorator.py
